# ai-log-agent

./: .env.example  .gitignore  README.md  data_contracts.md  docker-compose.yml
.github/: copilot-instructions.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
backend/: .dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: orchestrator.py  prompt.py  types.py
backend/app/api/: routes.py
backend/app/models/: request.py  response.py
backend/app/tools/: _cosmos_helpers.py  base.py  chat_history.py  cosmos_query.py  disconnect_stats.py  kql.py  models.py  registry.py  schema_discovery.py  session_data.py  session_log_stats.py  timeline.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AnalysisResult.tsx  AppHeader.tsx  FindingCard.tsx  QueryInput.tsx  Sidebar.tsx  Timeline.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
specs/: agent_spec.md  api_spec.md  architecture.md  tool_spec.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/main/contracts/: api-contract.md
